frontend/test/typecheck/error/missing-arguments-varargs.fc
extern int ext(int c, bool b, ...);

void foo() {
    ext(1);
}
